Added worker data, showed some visual indications when there are issues, added missing key props.
Logic for the issues -
The API returns a status field and a servers_issue field.
While I can assume that status would never be ok if the servers_issue is not null, I do not know for sure, so the status is shown regardless and the visual indication shows red when either status is not ok or servers_issue is not null.
This can result in "ok" being rendered as the status, but in red, because servers_issue is not null, but this is fine for now.

--- a/app/components/Details/Details.module.css
+++ b/app/components/Details/Details.module.css
@@ -4,12 +4,44 @@
   color: #ffffff;
   width: 30%;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.fullDetails {
+  flex: 1 1 auto;
+}
+
+.hasIssues {
+  border: 1px solid #ff0000;
 }
 
 .title {
   text-align: center;
+  flex: 0 0 auto;
 }
 
 .warning {
   color: #ff0000;
+}
+
+.workers {
+  margin-bottom: 1rem;
+}
+
+.worker {
+  margin-bottom: 0.5rem;
+}
+
+.issues {
+  border: 1px solid #ffd700;
+  justify-self: center;
+  padding: 10px;
+  border-radius: 7px;
+  flex: 0 0 auto;
+  text-align: center;
+}
+
+.hasServerIssues {
+  text-align: initial;
 }
