--- a/app/components/Details/Details.module.css
+++ b/app/components/Details/Details.module.css
@@ -12,6 +12,11 @@
   border: 1px solid #ff0000;
 }
 
+.lastUpdated {
+  font-size: 0.5rem;
+  margin: 0.25rem 0;
+}
+
 .title {
   text-align: center;
 }
