--- a/app/components/Details/Details.module.css
+++ b/app/components/Details/Details.module.css
@@ -2,11 +2,18 @@
   border-radius: 5px;
   background-color: #4e4343;
   color: #ffffff;
-  width: 30%;
+  width: 400px;
   padding: 1rem;
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 600px) {
+  .wrapper {
+    width: 100%;
+  }
+}
+
 
 .hasIssues {
   border: 1px solid #ff0000;
